<resources>
    <string name="app_name">Aplicacion para el Reciclaje</string>
    <string name="app_title">Sistema</string>
    <string name="action_settings">Configuracion</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_carton">Reciclado de papel</string>
    <string name="img_descr_papel">Imagen de papel para reciclar</string>
    <string name="img_descr_vidrio">Imagen Vidrio para reciclar</string>
    <string name="img_descr_plastico">Imagen Plastico para reciclar</string>
    <string name="img_descr_metal">Imagen metal para reciclar</string>
    <string name="img_descr_pila">Imagen pila para recicalr</string>
    <string name="img_descr_goma">Imagen para reutilizar la goma</string>
    <string name="title_activity_carton">Papel</string>
    <string name="Papel_text">
        "Material is the metaphor.\n\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"


        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Vidrio_metodo_text">
            "Vidrio\n\n"

            "Material de alta calidad para su re-uso , no pierde propiedades.\n"
            "Precio :   1.2  Bs/kilogramo\n"
            "Contenedor : color Verde.\n"
            "Empresa : Panaflex vidrios de seguridad\n"
            "Teléfono: No Disponible\n"
            "Ubicación: No disponible\n"
            "Correo: No Disponible.\n"

    </string>
    <string name="Carton_metodo_text">
        "Papel y Cartón\n\n"

        "Ambos materiales son reciclados y son bien aprovechados para un nuevo ciclo de vida.\n"
        "Precio :   1.5  Bs/kilogramo\n"
        "Contenedor : color Azul.\n"
        "Empresa : La Papelera S.A. y Papelera Vinto.\n"
        "Teléfono: 4 4268741      4 4356168\n"
        "Ubicación: Km 7 y 1/, Av Capitán Víctor Ustáriz       Quillacollo-VintoChico\n"
        "Correo: No Disponible.\n"

    </string>
    <string name="Plastico_metodo_text">
            "Plástico \n\n"
            "Material no biodegradable \n"
            "Precio :   0.90  Bs/kilogramo\n"
            "Contenedor : color Amarillo.\n"
            "Empresa : Plasbol, Plasbol, Recuplast , Reciclame Aristech , Bolsas Plásticas Dadi\n"
            ", Bopeplast, Ecoplastic, Induppont, Matrical, Plásticos Derqui y Plaxburg.\n"
            "Telefono: No Disponible\n"
            "Ubicacion: No Disponible\n"
            "Correo: No Disponible.\n\n"

    </string>
    <string name="Organico_metodo_text">

            "Orgánico\n\n"

            "fácil absorción y descomposición como abono vegetal\n"
            "Precio :   -----------  Bs/kilogramo\n"
            "Contenedor : color Naranja.\n"
            "Empresa : ---------------------\n"
            "Teléfono: No Disponible\n"
            "Ubicación: No disponible\n"
            "Correo: No Disponible.\n"

    </string>
    <string name="Pilasybaterias_metodo_text">
            "Baterías y Pilas"
            "Alta toxicidad para el suelo y agua."
            "No se tiene una manera de adecuada de descomposición o aprovechamiento "
            "después de su pérdida de vida, al igual que los neumáticos de los automóviles. "
            "Se escuchan soluciones para su adecuado reciclaje"
            "contenedor : color Rojo  por el peligro que representa."

    </string>
    <string name="Metal_metodo_text">

            "Metal\n\n"

            "Material no biodegradable \n"
            "Precio :  cobre  0.90  Bs/kilogramo\n"
            "Precio: aluminio 1.50 Bs/kilogramo\n"
            "Precio: fierro    0.80 Bs/kilogramo\n"
            "Contenedor : color Amarillo.\n"
            "Empresa :Fundidora Vinto Oruro\n"
            "Teléfono: No Disponible\n"
            "Ubicación: Oruro\n"
            "Correo: No Disponible.\n"

    </string>
    <string name="informacion_papel_text">
                                  "RECOJIDA DEL ENVASE \n\n"

        "Una vez que los productos han sido consumidos, el envase deja de cumplir la función para "
        "el que fue creado y se convierte en residuo.Es en ese instante cuando hay que recuperarlo "
        "para que pueda ser reciclado y contribuir así con el cuidado del medio ambiente.\n"

                "Los envases de papel y cartón van al contenedor azul.\n\n"

        "RECUPERACION DEL ENVASE \n\n"

        "Una vez que los hemos depositado en el contenedor adecuado, los envases de papel y cartón"
        "van directamente a los recuperadores y recicladores.En ellos, tras una clasificación en "
        "función de las calidades, pasan a ser reciclados para posteriormente convertirse en nuevo"
        "material de papel y cartón.\n\n"

    </string>
    <string name="informacion_carton_text">
        "El papel y cartón son una de las formas más beneficiosas de reciclaje para el medio "
        "ambiente, es importante recalcar que el papel está compuesto de fibras orgánicas las "
        "cuales se pueden volver a aprovechar para un nuevo papel.\n"
        "El proceso de reciclaje  es clasificar el papel de la siguiente manera:\n\n"

        "-Separar el papel blanco o papel de escritorio de los de color.\n"
        "-Retirar los objetos de metal o plástico que tienen añadidos.\n"
        "-Recuerda que para reciclar papel, deberás depositarlo en el contenedor de color azul. No "
        "lo olvides.\n\n"

        "El proceso de reciclaje, pasa por varias fases.\n\n"

        "-	La selección o clasificación\n"
        "-	Molienda donde el papel es triturado.\n"
        "-	Plastificación que consiste en añadir disolventes químicos para que las fibras del "
        "papel se separen.\n"
        "-	Reciclado del papel consiste en una criba de todo material que no es papel “sacar las "
        "impurezas del papel”.\n"
        "-	Centrifugación para  que el material sea separado por su densidad y las partículas "
        "de tinta sean eliminadas por las burbujas de aire.\n"
        "-	Pasta de papel es la materia esperada al cual se blanquea con peróxido de hidrogeno o "
        "hidrosulfito de sodio.\n\n"

        "Dato curioso:\n\n"

        "Seis cajas de leche en cartón de PIL hacen una caja de zapatos.\n\n"

    </string>
    <string name="informacion_metal_text">
        "Entre los metales reciclables los más rentables para la industria son el aluminio, cobre "
        "perfiles de construcción.\n"
        "Se tiene que considerar que los metales oxidan la tierra generando desgaste en la misma.\n"
        "-Resguarda los metales de la humedad.\n"
        "-Clasifica los materiales como aluminio, cobre y hierro.\n"
        "-Este material va en el contenedor de color Amarillo.\n\n"

        "El proceso de reciclaje\n\n"

        "Entre los metales el más beneficioso es el Aluminio.\n\n"

        "-Comienza con la recolección.\n"
        "-Traslado a la planta.\n"
        "-Separación y limpia.\n"
        "-Aplastamiento en grandes bloques.\n"
        "-Fundición.\n"
        "-Creado de láminas de aluminio para su nuevo uso.\n"
        "-Para el hierro y cobre se lleva el mismo proceso solo varían las temperaturas de "
        "fundición.\n\n"


    </string>
    <string name="informacion_bateria_text">
         "Pilas y Baterías\n"
         "El reciclaje de las Pilas y Baterías, es de vital importancia para el medio ambiente, "
         "al tratarse de productos altamente tóxicos.\n\n"

         "Las Pilas y Baterías pasan sus residuos tóxicos en especial al suelo y al agua.\n"
         "Con este elemento no sabemos qué hacer por lo cual debemos depositarlos en contenedores "
         "de color Rojo o Aislarlos del suelo.\n\n"

         "Recomendación \n\n"

         "-Trate de ponerlos muy separados de otros materiales. \n"
         "-Utilice un contenedor de plástico, trate de mantenerlo tapado y aislado del medio "
         " ambiente. \n\n"

         "Dato Curioso: \n\n"

         "Una pila en el suelo emite emisiones de mercurio el cual por ser un metal pesado baja "
         "hasta las aguas subterráneas contaminando el ecosistema.\n\n"
    </string>
    <string name="informacion_organico_text">
         "Es aquella materia que proviene de desechos naturales como son los alimentos, hojas, "
         "seres vivos o excrementos. \n"

         "Estos restos tienen un proceso natural de descomposición, por lo que rápidamente "
         "desaparecen para formar parte del nuevo ciclo de la vida. \n\n"


         "Métodos para acelerar el reciclaje Orgánico. \n\n"

         "Entre estos tenemos dos: \n"

         "Compostaje y Vermicompostaje \n\n"


         "El reciclaje orgánico se está empleando últimamente en la elaboración de "
         "biocombustibles, obtenido de semillas y fruta seca, creando alternativas sostenibles "
         "y baratas a los combustibles de origen fósil. \n"

         "En el reciclaje orgánico o basura orgánica a nivel doméstico, podemos utilizar el "
         "reciclaje orgánico como abono si tenemos plantas, un pequeño jardín con huerta o un "
         "huerto urbano. La forma idónea para no tener malos olores por la descomposición de esta "
         "basura orgánica, es enterrar en tierra los restos de frutas y verduras, que tienen un "
         "proceso de descomposición más rápido. \n\n"

    </string>
    <string name="informacion_plastico_text">
         "El plástico es una gran amenaza para el medio ambiente por dos motivos principales, su "
         "masiva utilización en todo tipo de productos y su lenta degradación.\n"
         "Los plásticos más comunes que se reciclan, son PVC y PET, siendo el primero mucho más "
         "contaminante para el medio ambiente.\n"
         "- En nuestro entorno las botellas de gaseosas no retornables son las más comunes para su "
         "reciclado.\n"
         "- Aplasta el envase para reducir el volumen.\n"
         "- Asegúrate que estén con sus tapas.\n"
         "- Muy importante los plásticos van en el contenedor de color Amarillo.\n\n"

         "El proceso de reciclaje del Plástico:\n\n"

         "-	Recogida.\n"
         "-	Rigurosa selección.\n"
         "-	Limpia con químicos.\n"
         "-	Moldeamiento de otro envase.\n\n"

         "Dato curioso:\n\n"

         "Las bolsas plásticas tardan 180 Años en degradarse, una herencia que nuestros nietos "
         "no quisieran tener.\n\n"

    </string>
    <string name="informacion_vidrio_text">
        "El vidrio es uno de los materiales más importantes, puede ser recuperado casi en su "
        "totalidad.\n"
        "La forma ideal para reciclar vidrio, consiste en almacenarlos en nuestros hogares, todo "
        "tipos de tarros, botellas o envases de vidrio.\n"
        "-Separa los vidrios de color cristalino de los vidrios de color.\n"
        "-Retira las etiquetas de los envases, estos son de papel generalmente.\n"
        "-Recuerda que para reciclar el vidrio, deberá depositarlo en el contenedor de color"
        " Verde.\n\n"

        "El proceso de reciclaje de vidrio es circular.\n\n"

        "-	La recogida para su posterior tratamiento en una planta de reciclaje.\n"
        "-	La molienda.\n"
        "-	Fundición.\n\n"

        "Dato curioso:\n\n"

        "Con el proceso de reciclaje de vidrio, se ahorra un 30% de energía respecto a obtenerlo "
        "por primera vez. En pocas palabras sale más económico reusar el vidrio a crear "
        "nuevo vidrio.\n\n"

    </string>
</resources>