<!-- view for AdMob Interstitial Ad -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ruben.appreciclaje.MainActivity">

    <ScrollView
        android:id="@+id/scrollIndex"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagePapel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:background="@mipmap/ic_launcher"
                    android:contentDescription="@string/img_descr_papel"
                    android:scaleType="center"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"/>

                <ImageView
                    android:id="@+id/imageVidrio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:background="@mipmap/ic_launcher"
                    android:contentDescription="@string/img_descr_vidrio"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp"
                android:orientation="horizontal">
                    
                <ImageView
                    android:id="@+id/imagePlastico"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:background="@mipmap/ic_launcher"
                    android:contentDescription="@string/img_descr_plastico"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/imageMetal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:background="@mipmap/ic_launcher"
                    android:contentDescription="@string/img_descr_metal"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageBateria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:background="@mipmap/ic_launcher"
                    android:contentDescription="@string/img_descr_pila"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/imageOrganico"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_margin="5dp"
                    android:background="@mipmap/ic_launcher"
                    android:contentDescription="@string/img_descr_goma"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
